<resources>
    <string name="app_name">Thermosmart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thermosmart</string>
    <string name="nav_header_desc">Control your smart thermostat</string>
    <string name="action_settings">Settings</string>

    <string name="menu_thermostat">Thermostat</string>
    <string name="menu_programs">Programs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_status">Status</string>
    <string name="menu_scheduler">Scheduler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_update">Last update</string>
</resources>
