<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_thermostat">

    <fragment
        android:id="@+id/nav_thermostat"
        android:name="com.dmagrom.thermosmart.ui.thermostat.ThermostatFragment"
        android:label="@string/menu_thermostat"
        tools:layout="@layout/fragment_thermostat" />

    <fragment
        android:id="@+id/nav_programs"
        android:name="com.dmagrom.thermosmart.ui.programs.ProgramsFragment"
        android:label="@string/menu_programs"
        tools:layout="@layout/fragment_programs" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.dmagrom.thermosmart.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_status"
        android:name="com.dmagrom.thermosmart.ui.tools.ToolsFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/nav_scheduler"
        android:name="com.dmagrom.thermosmart.ui.scheduler.SchedulerFragment"
        android:label="@string/menu_scheduler"
        tools:layout="@layout/fragment_scheduler" />

</navigation>