<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_thermostat"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_thermostat" />
        <item
            android:id="@+id/nav_programs"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_programs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/action_auto_start_log"
            app:actionLayout="@layout/action_view_switch"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_status"/>
    </group>

<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
-->
</menu>
